Fix font awesome icon script issue - Show serial number center aligned - Improve add farmer tab card designs

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -139,6 +139,10 @@
     padding: 0.4rem !important;
 }
 
+.tab-page-table td:first-child {
+    text-align: center;
+}
+
 .p3px
 {
     padding: 3px !important;
